2004-12-05  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscalls.c: Fix generalized memory leak upon RT
	object deletion.

	* skins/rtai/syscall.c (rt_alarm_wait): Provide user-space support
	for waiting for alarm shots.

	* skins/rtai/task.c (rt_task_set_priority): Check priority
	argument.

2004-12-04  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib/task.c (__init_skin): Must be single instance.

	* skins/rtai/alarm.c (rt_alarm_create): Fix position of name
	parameter.

	* skins/rtai/syscall.c (__rt_heap_create): Fix placeholder type
	used.

	* include/nucleus/fusion.h (FUSION_IRQ_PRIO): Add priority level
	for interrupt servers in user-space.

2004-12-03  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/alarm.c (rt_alarm_inquire): Add count of expiries.

2004-12-03  Panagiotis Issaris <panagiotis.issaris@mech.kuleuven.ac.be>

	* doc/docbook/xenomai/xenomai.xml: Fix typos and other
	spelling/grammar mistakes.

2004-12-03  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/types.h: Change xnsigmask_t to the natural
	integer type available on the platform, so that we can map it
	properly over some data carried by siginfo_t. In any case, it does
	not make any sense to allow different amount of possible signals
	across platforms by depending on the size of their respective
	natural long type.

	* skins/rtai/syscall.c: Fix "self" task determination code to
	encompass the case where the caller is a relaxed shadow.

	* skins/rtai/syscall.c: Turn -ENOENT errors into -ESRCH.

	* skins/rtai/task.c, skin/rtai/lib/task.c (rt_task_self,
	rt_task_slice): Finalize user-space support.

	* nucleus/pod.c (xnpod_calibration_thread): Fix stupid time
	reference bug.

2004-12-02  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/task.c (rt_task_self): Add self descriptor retrieval
	function.
	(rt_task_slice): Add routine to setup the round-robin credit.

	* nucleus/timer.c (xntimer_enqueue_aperiodic): Enforce new
	internal priority of timers.
